헤어 중간 저장

--- a/html/header.html
+++ b/html/header.html
@@ -7,7 +7,7 @@
     <title>Leeum header</title>
 
     <!-- Link Inner's CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -19,14 +19,326 @@
                         <img src="../imgs/logo-header-b.png" alt="logo-img">
                     </div>
                     <nav class="menu-box">
-                        ul>li
+                        <ul>
+                            <li>
+                                <a href="#"><span>전시</span></a>
+                                <ul>
+                                    <li><a href="#">현대전시</a></li>
+                                    <li><a href="#">예정전시</a></li>
+                                    <li><a href="#">과거전시</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#"><span>소장품</span></a>
+                                <ul>
+                                    <li><a href="#">고미술</a></li>
+                                    <li><a href="#">현대미술</a></li>
+                                    <li><a href="#">보존</a></li>
+                                    <li><a href="#">수어해설</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#"><span>배움/연구</span></a>
+                                <ul>
+                                    <li><a href="#">프로그램</a></li>
+                                    <li><a href="#">아카이브</a></li>
+                                    <li><a href="#">출판</a></li>
+                                    <li><a href="#">영상자료</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#"><span>멤버십</span></a>
+                                <ul>
+                                    <li><a href="#">가입과 안내</a></li>
+                                    <li><a href="#">프로그램과 혜택</a></li>
+                                    <li><a href="#">뉴스레터</a></li>
+                                    <li><a href="#">멤버십 공지</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#"><span>ABOUT</span></a>
+                                <ul>
+                                    <li><a href="#">미술관 소개</a></li>
+                                    <li><a href="#">방문안내</a></li>
+                                    <li><a href="#">공지</a></li>
+                                    <li><a href="#">보도자료</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#"><span>CONTECT</span></a>
+                                <ul>
+                                    <li><a href="#">전시예약</a></li>
+                                    <li><a href="#">리움호암 셔틀버스예약</a></li>
+                                    <li><a href="#">온라인스토어</a></li>
+                                    <li><a href="#">법인회원</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <div class="gnb-bg">
+                            <div>
+                                <div><img src="../imgs/img-header-sym-1.png" alt="img-symbol"></div>
+                                <div><img src="../imgs/img-header-sym-2.png" alt="img-symbol"></div>
+                                <div><img src="../imgs/img-header-sym-3.png" alt="img-symbol"></div>
+                                <div><img src="../imgs/img-header-sym-4.png" alt="img-symbol"></div>
+                                <div><img src="../imgs/img-header-sym-5.png" alt="img-symbol"></div>
+                            </div>
+                        </div>
                     </nav>
+                    <div class="btn-box">
+                        <div class="leng">
+                            <span>ENG</span><span>KOR</span>
+                        </div>
+                        <div class="login">
+                            <span>로그인</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="sub-menu-bar"></div>
-            <div class="side-menu-bar"></div>
+            <div class="side-menu-bar">
+                <nav class="menu-box">
+                    <ul>
+                        <li>
+                            <a href="#"><span>전시</span></a>
+                            <ul>
+                                <li><a href="#">현대전시</a></li>
+                                <li><a href="#">예정전시</a></li>
+                                <li><a href="#">과거전시</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>소장품</span></a>
+                            <ul>
+                                <li><a href="#">고미술</a></li>
+                                <li><a href="#">현대미술</a></li>
+                                <li><a href="#">보존</a></li>
+                                <li><a href="#">수어해설</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>배움/연구</span></a>
+                            <ul>
+                                <li><a href="#">프로그램</a></li>
+                                <li><a href="#">아카이브</a></li>
+                                <li><a href="#">출판</a></li>
+                                <li><a href="#">영상자료</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>멤버십</span></a>
+                            <ul>
+                                <li><a href="#">가입과 안내</a></li>
+                                <li><a href="#">프로그램과 혜택</a></li>
+                                <li><a href="#">뉴스레터</a></li>
+                                <li><a href="#">멤버십 공지</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>ABOUT</span></a>
+                            <ul>
+                                <li><a href="#">미술관 소개</a></li>
+                                <li><a href="#">방문안내</a></li>
+                                <li><a href="#">공지</a></li>
+                                <li><a href="#">보도자료</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>CONTECT</span></a>
+                            <ul>
+                                <li><a href="#">전시예약</a></li>
+                                <li><a href="#">리움호암 셔틀버스예약</a></li>
+                                <li><a href="#">온라인스토어</a></li>
+                                <li><a href="#">법인회원</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="gnb-bg"></div>
+                </nav>
+
+                <div class="btn-box">
+                    <div class="leng">
+                        <span>ENG</span><span>KOR</span>
+                    </div>
+                    <div class="login">
+                        <span>로그인</span>
+                    </div>
+                </div>
+            </div>
         </header>
     </div>
+
+
+    <style>
+        .header-inner {
+            position: relative;
+        }
+
+        .header-inner>.container {
+            max-width: 1920px;
+            padding: 0 20px;
+            width: 100%;
+            height: 80px;
+            gap: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .header-inner .logo-box {
+            width: 100px;
+        }
+
+        .header-inner .menu-box {
+            flex-grow: 1;
+            max-width: 950px;
+            align-self: stretch;
+        }
+
+        .header-inner .menu-box>ul {
+            display: flex;
+            width: 100%;
+            height: 100%;
+
+            justify-content: space-between;
+        }
+
+        .header-inner .menu-box>ul>li {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            flex: 1;
+
+            font-size: 18px;
+            font-weight: 500;
+
+            position: relative;
+
+            box-sizing: border-box;
+        }
+
+        .header-inner .menu-box>ul>li::after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            width: 0px;
+            aspect-ratio: 1/1;
+            border-radius: 50%;
+
+            background-color: #000;
+
+            opacity: 0;
+
+            transition: all 0.4s ease;
+        }
+
+        .header-inner .menu-box>ul>li:hover::after {
+            opacity: 1;
+            width: 10px;
+        }
+
+        .header-inner .menu-box>ul ul {
+            display: flex;
+            gap: 20px;
+            flex-direction: column;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            height: 0;
+            white-space: nowrap;
+            padding-top: 28px;
+            transition: all 0.4s ease;
+            overflow: hidden;
+            opacity: 0;
+        }
+
+        .header-inner .menu-box:hover>ul ul {
+            display: flex;
+            height: 300px;
+            opacity: 1;
+        }
+
+        .header-inner .menu-box>ul ul>li {
+            font-size: 16px;
+            font-weight: 400;
+
+            text-align: center;
+        }
+
+        .header-inner .menu-box>ul ul>li>a {
+            display: inline-block;
+            position: relative;
+        }
+
+        .header-inner .menu-box>ul ul>li>a::after {
+            content: "";
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 100%;
+
+            transform: translateX(-50%);
+            width: 0;
+            height: 1px;
+            background-color: #999;
+            transition: all 0.4s ease;
+        }
+
+        .header-inner .menu-box>ul ul>li>a:hover::after {
+            width: 100%;
+        }
+
+        .header-inner .menu-box>.gnb-bg {
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            width: 100%;
+            height: 300px;
+            border: solid red;
+            position: absolute;
+            left: 0;
+            top: 100%;
+        }
+
+        .header-inner .menu-box>.gnb-bg>div {
+            width: 120px;
+            aspect-ratio: 1/1;
+
+            border: solid green;
+
+            position: relative;
+        }
+
+        .header-inner .menu-box>.gnb-bg>div>div {
+            width: 100%;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+
+            border: solid pink;
+
+            animation-name: logoAni;
+            animation-duration: 1000;
+            ani
+        }
+
+        @keyframes logoAni {
+            0% {
+                transform: rotate(0);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
 
 </body>
 
