--- a/html/banner.html
+++ b/html/banner.html
@@ -233,11 +233,12 @@
       width: 100vw;
       height: 100vh;
 
-      outline: 2px solid blue;
+      /* outline: 2px solid blue; */
     }
 
     .sec-2-vision .container .bg-box{
-      height: 100%; width: 100%; background-image: url(../imgs/img-bg-sec2.jpg);
+      height: 100%; width: 100%; background-image: url(../imgs/img-bg-sec2.jpg); background-repeat: no-repeat;
+      background-size: cover; background-position: center;
     }
 
     /* @media (max-width:1000px) {
